<resources>
    <string name="btn1name">Clear Cart</string>
    <string name="tvname1">Chicken Burger</string>
    <string name="tvname2">Cheese Burger</string>
    <string name="tv3price">Rs. 690.00</string>
    <string name="tv3">Rs. 690.00</string>
    <string name="tv4">"Chicken Burger "</string>
    <string name="tv5">Rs. 690.00</string>
    <string name="tvname3">Chicken Burger</string>
    <string name="tn1">1</string>
    <string name="tv7remove">Remove</string>
    <string name="tv10name">"Cheese "</string>
    <string name="tv10name0">Cheese Burger</string>
    <string name="tv11name">Rs. 590.00</string>
    <string name="tn2name">2</string>
    <string name="tn3name">2</string>
    <string name="tv12name">Remove</string>
    <string name="tv13name">Rs. 690.00</string>
    <string name="tv18name">Rs.1180.00</string>
    <string name="tv15name">Total : Rs. 1870.00</string>
    <string name="button4">place order</string>
    <string name="tv">Search Item</string>
    <string name="tv1">Chicken Burger</string>
    <string name="tvstyle">bold</string>
    <string name="tv7">Cheese Burger</string>
    <string name="tv2style">bold</string>
    <string name="tv6">Vegetable Burger</string>
    <string name="tv6style">bold</string>
    <string name="text6">Do you want to remove this item?</string>
    <string name="btn1">Add to Cart</string>
    <string name="btn">Yes</string>
    <string name="btn2">no</string>
    <string name="tv9">Add to Cart</string>
    <string name="tvcart">CART</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>


    <string name="Email">Enter your Email Address</string>
    <string name="password">Enter your Password</string>
    <string name="btnSign">SIGN IN</string>
    <string name="Account">Create an Account</string>
    <string name="hint1">Enter your name</string>
    <string name="pw">Password</string>
    <string name="Rpw">Repeat Password</string>
    <string name="Remail">Email Address</string>
    <string name="Reg">REGISTER</string>
    <string name="Title">Create Account</string>
    <string name="title_activity_place_order">PlaceOrder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnMain">GET STARTED</string>
    <string name="tvSubmain">Place where taste never ends</string>


    <string name="btnname2">Save</string>
    <string name="tv2">CHECKOUT</string>
    <string name="tvname33">Total Price Rs.0.00</string>
    <string name="tvtext4">Total Quantity 00</string>
    <string name="tvname55">Card Holders Name :</string>
    <string name="tvname66">Payment Method :</string>
    <string name="tvname7">Card Number :</string>
    <string name="tvname8">Date of Expiration :</string>
    <string name="tvname9">Security Code :</string>
    <string name="tvnamedelete">CREDIT CARD DETAILS</string>
    <string name="tvdelete1">Card Type :  Mastercard</string>
    <string name="tvdelete2">Card Type : Mastercard</string>
    <string name="tvdelete4">Card Number : **** **** **** 8888</string>
    <string name="tvdelete5">Expiration Date : 01/03/2023</string>
    <string name="tvdelete6">Card Address : 201, Shanthi Villa , Silkhouse Street , Kandy </string>

    <string name="btnnamedelete1">Edit Card Details</string>
    <string name="btnnamedelete2">Delete the Payment Method</string>
    <string name="btnnamedelete3">Make the payment</string>
    <string name="tvconfirmationname1">Transaction Successful !</string>
    <string name="tvconfirmationname2">Ref#76543789</string>
    <string name="tvconfirmationname4">LKR 3,000.00</string>
    <string name="tvsearchname1">Payment History</string>
    <string name="tvsearchntext1">Please Select the Search Criteria</string>
    <string name="tvsearchtext2">Payment Id (Reference No)</string>
    <string name="tvsearchtext3">Payment Method </string>
    <string name="tvsearchtext5">From date</string>
    <string name="tvsearchtext6">From amount</string>
    <string name="tvsearchtext7">Sort order</string>
    <string name="btnsearchtext1">Search</string>
    <string name="btntextnamec1">Go to Payment History</string>
    <string name="tvhistorytext1"> Do you want to see your order details ?</string>
    <string name="tvtexthistory2">Do you want to see your order details?</string>
    <string name="btntexth1" />
    <string name="btntexthh2">Yes</string>
    <string name="btntexthh3">No</string>
    <string name="btnconf1">Go to Payment History</string>

    <string name="app_name">foodOrderApp</string>
    <string name="tvMSG">Are you sure you want to delete this order?</string>
    <string name="btnYES">YES</string>
    <string name="btnNO">NO</string>
    <string name="title_activity_scrolling_view_order">ScrollingActivity</string>
    <string name="large_text">

    </string>
    <string name="action_settings">Settings</string>
    <string name="tvTopicView">VIEW YOUR ORDERS</string>
    <string name="tvSearch">Search Order</string>
    <string name="svSearch">Search Order</string>
    <string name="btnSearch">SEARCH</string>
    <string name="tvName">Cheese Burger</string>
    <string name="tvAmount">Amount : Rs.590.00</string>
    <string name="tvStatus">Status : Finished</string>
    <string name="tvName2">Chicken Burger</string>
    <string name="tvAmount2">Amount : Rs.640.00</string>
    <string name="tvStatus2">Status : Finished</string>
    <string name="tvName3">Hamburger</string>
    <string name="tvAmount3">Amount : Rs.500.00</string>
    <string name="tvStatus3">Status : Unpaid</string>
    <string name="tvMainTopic">PLACE YOUR ORDER</string>
    <string name="tvNameP">Cheese Burger</string>
    <string name="tvPriceP">Rs.590.00</string>
    <string name="tvQTY1">QTY :</string>
    <string name="etnNumber1">1</string>
    <string name="tvNameP2">Chicken Burger</string>
    <string name="tvPrice2">Rs.640.00</string>
    <string name="etnNumber2">2</string>
    <string name="tvTot">Total : Rs.1,870.00</string>
    <string name="btnPOrder">PLACE ORDER</string>
    <string name="btnAdd">Add to cart</string>
    <string name="tvFeedback">GIVE US YOUR FEEDBACK</string>
    <string name="tvTopicFedd">GIVE US YOUR FEEDBACK</string>
    <string name="tvSubTopic">Your Last Order</string>
    <string name="tvID">ID : 1452</string>
    <string name="tvNameFeed">Cheese Burger</string>
    <string name="tvTime">Today : 10.48pm</string>
    <string name="btnRecieved">Recieved</string>
    <string name="btnNRecieved">Not yet Recievd</string>
    <string name="tvSubTopic2">How was the Food?</string>
    <string name="btnSend">Send us your Feedback</string>
    <string name="btnEdit">Edit Feedback</string>
    <string name="title_activity_home_navigation">homeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btnAccount">My Account</string>


</resources>