<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mj"
    android:backgroundTintMode="add"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Account"
        android:textColor="@color/clrAccount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="335dp"
        android:layout_height="156dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FCFFFFFF"
            android:textSize="20sp"
            tools:text="@string/Email" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:autoText="true"
            android:backgroundTint="#F7FFFFFF"
            android:drawableTint="#2D2F31"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#EDFFFFFF" />

        <TextView
            android:id="@+id/pwPassword"
            android:layout_width="249dp"
            android:layout_height="35dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:text="Enter your Password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSign"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:layout_gravity="start"
        android:layout_marginTop="156dp"
        android:backgroundTint="@color/btnReg"
        android:enabled="false"
        android:text="@string/btnSign"
        android:textColor="@color/clrSign"
        android:textSize="@dimen/txtSize"
        android:textStyle="bold"
        app:iconSize="@dimen/btnSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>