<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolormain"
    tools:context=".Confirmation">

    <View
        android:id="@+id/view"
        android:layout_width="365dp"
        android:layout_height="304dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="193dp"
        android:background="@color/vbgcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="271dp"
        android:layout_height="104dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="360dp"
        android:gravity="center"
        android:text="@string/text6"
        android:textColor="@color/cbcolor"
        android:textSize="@dimen/tv8size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="259dp"
        android:backgroundTint="@color/btn4clolor"
        android:text="@string/btn"
        android:textColor="@color/cbcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="229dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="49dp"
        android:backgroundTint="@color/btn4clolor"
        android:text="@string/btn2"
        android:textColor="@color/cbcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="170dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="475dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/microsoftteams_image__11_" />
</androidx.constraintlayout.widget.ConstraintLayout>